tests/baselines/reference/implementClausePrecedingExtends.errors.txt
tests/cases/compiler/implementClausePrecedingExtends.ts(2,22): error TS1005: '{' expected.
tests/cases/compiler/implementClausePrecedingExtends.ts(2,32): error TS1005: ';' expected.
tests/cases/compiler/implementClausePrecedingExtends.ts(2,7): error TS2420: Class 'D' incorrectly implements interface 'C'.
  Property 'foo' is missing in type 'D'.


==== tests/cases/compiler/implementClausePrecedingExtends.ts (3 errors) ====
    class C { foo: number }
    class D implements C extends C { }
                         ~~~~~~~
!!! error TS1005: '{' expected.
                                   ~
!!! error TS1005: ';' expected.
          ~
!!! error TS2420: Class 'D' incorrectly implements interface 'C'.
!!! error TS2420:   Property 'foo' is missing in type 'D'.